<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Products</string>

    <!-- Label for overflow menu option that deletes all inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Inventory</string>

    <!-- Label for delete message [CHAR LIMIT=20] -->
    <string name="deleted_all">Successfully deleted all products!</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Title for the view activity [CHAR LIMIT=20] -->
    <string name="view_activity_title">Product Details</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Label for product name [CHAR LIMIT=30] -->
    <string name="product_name">Product Name</string>

    <!-- Label for product price [CHAR LIMIT=30] -->
    <string name="product_price">Price</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for supplier name information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier name</string>

    <!-- Label for supplier phone information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_phone">Supplier phone number</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price ($)</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier</string>

    <!-- Text hint for supplier phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Phone number</string>

    <!-- For call button in viewActivity [CHAR LIMIT=30] -->
    <string name="call">Call to Supplier</string>

    <!-- Unknown product price [CHAR LIMIT=25] -->
    <string name="unknown_product_price">Price: unknown</string>

    <!-- Sale button [CHAR LIMIT=25] -->
    <string name="sale">SALE</string>

    <!-- Unknown product quantity [CHAR LIMIT=5] -->

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Title text for the empty view, which describes the empty shop image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No inventory yet...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Required messages for product "add" -->
    <string name="product_name_required">Product name is required</string>
    <string name="price_required">Product price is required</string>
    <string name="quantity_required">Product quantity is required</string>

    <!-- Messages for update product -->
    <string name="update_failed">Update: failed!</string>
    <string name="update_successful">Update: successful!</string>

    <!-- Increment message -->
    <string name="increment">You can not add more than 100 quantity of product</string>
    <!-- Decrement message -->
    <string name="decrement">You can not have less than 0 quantity of product</string>
</resources>
