<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewActivity"
    tools:targetApi="lollipop">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/layout">

                <!-- Label for product name -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/product_name" />

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="" />
            </LinearLayout>

            <LinearLayout style="@style/layout">

                <!-- Label of product price-->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/product_price" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="" />
            </LinearLayout>

            <LinearLayout style="@style/layout">

                <!-- Label for quantity -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_quantity" />

                <!-- Quantity increment/decrement -->
                <LinearLayout style="@style/EditorFieldStyle">

                    <Button
                        style="@style/Quantity"
                        android:background="@color/colorAccent"
                        android:onClick="decrement"
                        android:text="-" />

                    <TextView
                        android:id="@+id/quantity_edit_text"
                        style="@style/Quantity" />

                    <Button
                        android:id="@+id/sale"
                        style="@style/Quantity"
                        android:background="@color/colorAccent"
                        android:onClick="increment"
                        android:text="+" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout style="@style/layout">

                <!-- Label for supplier name -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_supplier_name" />

                <!-- Supplier name field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout style="@style/layout">

                <!-- Label for supplier phone -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_supplier_phone" />

                <!-- Supplier phone -->
                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Button for delete product -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/delete_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_delete_product"
            tools:ignore="RelativeOverlap" />

        <!-- Button for call to supplier -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/phoneTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_call" />
    </RelativeLayout>
</LinearLayout>